tests/baselines/reference/parserObjectCreationArrayLiteral1.errors.txt
parserObjectCreationArrayLiteral1.ts(1,5): error TS2304: Cannot find name 'Foo'.
parserObjectCreationArrayLiteral1.ts(1,9): error TS1011: An element access expression should take an argument.


==== parserObjectCreationArrayLiteral1.ts (2 errors) ====
    new Foo[];
        ~~~
!!! error TS2304: Cannot find name 'Foo'.
            
!!! error TS1011: An element access expression should take an argument.